# product-api/handlers/delete.go
@@ -9,7 +9,7 @@ import (
 // swagger:route DELETE /products/{id} products deleteProducts
 // Returns a list of products
 // responses:
-// 		201: noContent
+// 		201: noContentResponse
 //  404: errorResponse
 //  501: errorResponse
 
